syntax = "proto3";

package bob.v1;

option go_package = "github.com/manabie-com/backend/pkg/manabuf/bob/v1;bpb";

enum UserNotificationStatus {
  USER_NOTIFICATION_STATUS_NONE = 0;
  USER_NOTIFICATION_STATUS_NEW = 1;
  USER_NOTIFICATION_STATUS_SEEN = 2;
  USER_NOTIFICATION_STATUS_READ = 3;
  USER_NOTIFICATION_STATUS_FAILED = 4;
}

enum NotificationType {
  NOTIFICATION_TYPE_NONE = 0;
  NOTIFICATION_TYPE_TEXT = 1;
  NOTIFICATION_TYPE_PROMO_CODE = 2;
  NOTIFICATION_TYPE_ASSIGNMENT = 3;
}

enum AskDuration {
  ASK_DURATION_DAY = 0;
  ASK_DURATION_WEEK = 1;
  ASK_DURATION_MONTH = 2;
  ASK_DURATION_YEAR = 3;
}

enum QuestionStatus {
  QUESTION_STATUS_WAITING_FOR_ASSIGN = 0;
  QUESTION_STATUS_ASSIGNED = 1;
  QUESTION_STATUS_MARKED_AS_RESOLVED = 2;
  QUESTION_STATUS_MARKED_AS_INVALID = 3;
  QUESTION_STATUS_INVALID = 4;
  QUESTION_STATUS_SOLVED = 5;
  QUESTION_STATUS_EXPIRED_SOLVED = 6;
  QUESTION_STATUS_RATED = 7;
  QUESTION_STATUS_ARCHIVED = 8;
}

enum TutorStatus {
  TUTOR_STATUS_NONE = 0;
  TUTOR_STATUS_ONLINE = 1;
  TUTOR_STATUS_OFFLINE = 2;
}

enum QuestionTransition {
  QUESTION_TRANSITION_ASSIGN = 0;
  QUESTION_TRANSITION_MARKED_AS_RESOLVED = 1;
  QUESTION_TRANSITION_MARKED_AS_INVALID = 2;
  QUESTION_TRANSITION_AGREE_INVALID = 3;
  QUESTION_TRANSITION_DISAGREE_INVALID = 4;
  QUESTION_TRANSITION_AGREE_RESOLVED = 5;
  QUESTION_TRANSITION_DISAGREE_RESOLVED = 6;
  QUESTION_TRANSITION_TIME_OUT_SOLVED = 7;
  QUESTION_TRANSITION_RATE = 8;
  QUESTION_TRANSITION_ARCHIVED = 9;
}

enum StudentLearningEvent {STUDENT_LEARNING_EVENT_THREE_LO_EVENT = 0;}

enum AchievementCrown {
  ACHIEVEMENT_CROWN_NONE = 0;
  ACHIEVEMENT_CROWN_BRONZE = 1;
  ACHIEVEMENT_CROWN_SILVER = 2;
  ACHIEVEMENT_CROWN_GOLD = 3;
}

enum NotificationEvent {
  NOTIFICATION_EVENT_NONE = 0;
  NOTIFICATION_EVENT_X_LO_COMPLETED = 1;
  NOTIFICATION_EVENT_TEACHER_GIVE_ASSIGNMENT = 2;
  NOTIFICATION_EVENT_TEACHER_RETURN_ASSIGNMENT = 3;
  NOTIFICATION_EVENT_STUDENT_SUBMIT_ASSIGNMENT = 4;
  NOTIFICATION_EVENT_ASSIGNMENT_UPDATED = 5;
}

enum PublishStudentVideoStatus {
  PUBLISH_STUDENT_VIDEO_STATUS_NONE = 0;
  PUBLISH_STUDENT_VIDEO_STATUS_ON = 1;
  PUBLISH_STUDENT_VIDEO_STATUS_OFF = 2;
}

enum UnmuteStudentAudioStatus {
  UNMUTE_STUDENT_AUDIO_STATUS_NONE = 0;
  UNMUTE_STUDENT_AUDIO_STATUS_ON = 1;
  UNMUTE_STUDENT_AUDIO_STATUS_OFF = 2;
}

enum MediaType {
  MEDIA_TYPE_NONE = 0;
  MEDIA_TYPE_VIDEO = 1;
  MEDIA_TYPE_IMAGE = 2;
  MEDIA_TYPE_PDF = 3;
  MEDIA_TYPE_AUDIO = 4;
}

enum PrepareToPublishStatus {
  PREPARE_TO_PUBLISH_STATUS_NONE = 0;
  PREPARE_TO_PUBLISH_STATUS_REACHED_MAX_UPSTREAM_LIMIT = 1;
  PREPARE_TO_PUBLISH_STATUS_PREPARED_BEFORE = 2;
}

enum UnpublishStatus{
  UNPUBLISH_STATUS_UNPUBLISHED_NONE = 0;
  UNPUBLISH_STATUS_UNPUBLISHED_BEFORE = 1;
}
